BUG FIX: Spacing on register button

--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -12,8 +12,8 @@
   margin-top: 0px;
 }
 
-#signInButton,
-#registerButton {
+#signInSubmit,
+#registerSubmit {
   margin-right: 10px;
 }
 
